Version 0.2.1 ()
	added, public downloads
	added, downloads settings
	update, many new translations
	update, installer writes downloads settings
	bugfix, fixed other minor bugs
	bugfix, public navigation shows no longer invisible content on public pages
Version 0.2.0 (2018-03-28)
	added, languages for the installer
	added, edit/add footer in general settings to change the footer in application
	bugfix, fixed many many other minor bugs
	update, clean code
	update, many new translations
	update, extend table settings -> row 'lang_short'
	update, extend and improve installer
Version 0.1.9 (2018-03-09)
	added, integrated public articles
	update, clean code
Version 0.1.8 (2018-03-07)
	update, tinymce/tinymce (4.7.7 => 4.7.9)
	update, components/jquery (3.2.1 => 3.3.1)
Version 0.1.7 (2018-03-07)
	update, installer
	update, README.md
	update, code clean
Version 0.1.6 (2018-03-02)
	added, integrated public news
	added, integrated new settings
	bugfix, fixed many many other minor bugs
	update, translates
	update, installer
Version 0.1.5 (2018-02-27)
	update, bugfix a small cosmetic improvements
	remove, cms-config.php
Version 0.1.4 (2018-02-26)
	remove, classic theme
	update, improve admin navigation 
	added, Links-Settings and public links section
Version 0.1.3 (2018-02-23)
	bugfix, fixed many many other minor bugs
Version 0.1.2 (2018-02-22)
	added, brandnew installer
	added, settings for mainpage
	added, mainpage
	added, contact enqiery
	bugfix, fixed many many other minor bugs
	update, Updating tinymce/tinymce (4.7.6 => 4.7.7)
Version 0.1.1 (2018-02-15)
	update, tinymce editor (4.7.5 => 4.7.6)
Version 0.1.0 (2018-01-30)
	added, tagline in sites
	bugfix, fixed many many other minor bugs
Version 0.0.9 (2018-01-29)
	bugfix, fixed many many other minor bugs
	added, dynamic navbar in public part
Version 0.0.8 (2018-01-25)
	bugfix, badges works again
	bugfix, fixed many many other minor bugs
	added, integrate new glyphicons