@@ -1,6 +1,0 @@
-<?php
-
-$db['host'] = 'localhost';   // Host
-$db['uid']  = 'root';        // User
-$db['pwd']  = 'suse2017sql1';            // Password
-$db['db']   = 'heinercms';   // Database
